# dutchsoils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  plot.py  process.py  pyproject.toml
docs/examples/: 00-Overview.ipynb
docs/source/: about.rst  api-documentation.rst  api-reference.rst  conf.py  contribute.rst  getting-started.rst  index.rst
docs/source/examples/: 01-Get-SoilProfile.ipynb  02-Get-data-SoilProfile.ipynb  03-Plot-SoilProfile.ipynb  04-Get-input-pySWAP.ipynb  index.rst
src/dutchsoils/: __init__.py  plot.py  soilmap.py  soilprofile.py
src/dutchsoils/data/: BofekClusters.csv  BofekClustersNames.csv  SoilHorizons.csv  SoilProfiles.csv  SoilProfiles_MapAreaID.csv  Staringreeks2018.csv  StaringreeksNamen2018.csv  soilprofiles_BodemkaartBofek.csv
tests/: plot_test.py  soilprofile_test.py
tests/data/: bofek1001_frac.csv  bofek1001_hf.csv  bofek1001_sp1.csv  bofek1001_sp2.csv  bofek_cluster_3002.csv  soil_id_90110280.csv  soilprofile90110280_horizondata_all.csv  soilprofile90110280_horizondata_chemical.csv  soilprofile90110280_horizondata_hydraulic.csv  soilprofile90110280_horizondata_physical.csv
