[project]
name = "dutchsoils"
version = "0.1.0"
description = "Code to download and combine the Dutch soil map, BOFEK clustering and Staring series."
authors = [
    {name = "markvdbrink",email = "mark.vandenbrink@wur.nl"}
]
license = {text = "GNU General Public Licence v3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "py7zr (>=0.22.0,<0.23.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pedon (>=0.0.7,<0.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
