[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dutchsoils"
version = "0.1.0"
description = "Package to get soil profiles of the Netherlands."
authors = [
    {name = "markvdbrink",email = "mark.vandenbrink@wur.nl"}
]
maintainers = [
    {name = "markvdbrink",email = "mark.vandenbrink@wur.nl"}
]
license = {text = "GNU General Public Licence v3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pedon (>=0.0.7,<0.0.8)",
    "numpy (>=2.2.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License  :: OSI Approved :: GPL-3.0-only",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/markvdbrink/dutchsoils"
Issues = "https://github.com/markvdbrink/dutchsoils/issues"
Source = "https://bodemdata.nl/"

[project.optional-dependencies]
ipykernel = ["ipykernel (>=6.29.5,<7.0.0)"]
dev = [
    "pytest",
    "pre-commit",
]
